syntax = "proto3";

package yomishi.anki;

import "scan.proto";

service Anki {
  rpc SaveDefinition(SaveDefinitionRequest) returns (SaveDefinitionReply) {}
}

message SaveDefinitionRequest { yomishi.scan.ScanResult result = 1; }

message SaveDefinitionReply { }
